tests/option_2_tests/fail/perf2.gpy
fn triangle(n: i32) -> i32 {
  let x = alloc(100, 0) in
  let i = alloc(1, 0) in
  while get(i, 0) < n {
    set(x, 0, (get(x, 0) + get(i, 0)));
    set(i, 0, (get(i, 0) + 1))
  };
  get(x, 0)
}

fn f(n: i32, m: i32) -> unit {
  let i = alloc(1, 0)
  while get(i, 0) < m {
    triangle(n);
    set(i, 0, get(i, 0) + 1)
  }
}

f(100, 100)